--- a/project/programacion2d.vcxproj.filters
+++ b/project/programacion2d.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="..\src\audio_buffer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\audio_source.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\litegfx.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\lib\audio_buffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\lib\audio_source.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
